fix sticky footer issue on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ nav, footer {
  display: block;
  min-height: 68px;
  background: rgba(150, 200, 0, 1);
+ flex: none;
  }
 
 nav {
@@ -203,6 +204,14 @@ h3 {
   float: right;
   display: block;
 }
+.thomas-about {
+  font-family: "Helvetica", sans-serif;
+  font-size: 11px;
+  margin-right: 15%;
+  margin-top: 14px;
+  float: right;
+  display: block;
+}
 
 .site {
   display: -webkit-flex;
@@ -239,12 +248,6 @@ h3 {
 @media only screen and (max-width: 640px) {
   nav {
     border-bottom: 3px solid rgba(230, 230, 0, 1);
-  }
-  nav > div:nth-child(1) {
-    margin-left: 0px;
-  }
-  nav > div:nth-child(3) {
-    margin-right: 0px;
   }
   .navbar-text {
     margin-top: 22px;
